--- a/ADO.NET/App.config
+++ b/ADO.NET/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+	<add name ="Movies_PV_319"
+		 connectionString="
+		 Data Source=(localdb)\ProjectModels;
+		 Initial Catalog=Movies;Integrated Security=True;
+		 Connect Timeout=30;Encrypt=False;
+		 TrustServerCertificate=False;
+		 ApplicationIntent=ReadWrite;
+		 MultiSubnetFailover=False"
+		 />
+	</connectionStrings>
+
 </configuration>
